# couchbase-python-client

./: .ci_script.sh  .clang-format  .clang-tidy  .cmake-format.yaml  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .tests.ini.travis  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LOGGING.md  MANIFEST.in  Makefile.am  README.md  README.rst  README.txt  basic.py  cbuild_cfg.json  cbuild_config.py  cluster_connect  cmake_build.py  cmodule.py  configure.ac  conftest.py  couchbase-sdk-python-black-duck-manifest.yaml  couchbase.pxd  couchbase_datastructures.py  couchbase_kv_tests.py  couchbase_version.py  dev_requirements.txt  gen_config.py  lcb.c  lcb.pyx  lcb_version.py  pycbc_build_setup.py  (+16 more)
acouchbase/: __init__.py  analytics.py  asyncio_iops.py  binary_collection.py  bucket.py  cluster.py  collection.py  datastructures.py  iterator.py  kv_range_scan.py  n1ql.py  scope.py  search.py  views.py
acouchbase/logic/: __init__.py  bucket_impl.py  client_adapter.py  cluster_impl.py  collection_impl.py  scope_impl.py  wrappers.py
acouchbase/management/: analytics.py  buckets.py  collections.py  eventing.py  queries.py  search.py  users.py  views.py
acouchbase/py34only/: iterator.py
acouchbase/tests/: _test_utils.py  analytics_t.py  analyticsmgmt_t.py  async_utilities_t.py  asyncio_tests.py  binary_collection_t.py  binary_durability_t.py  bucket_t.py  bucketmgmt_t.py  chain_t.py  cluster_t.py  collection_t.py  collectionmgmt_t.py  credentials_t.py  datastructures_t.py  durability_t.py  eventingmgmt_t.py  fixtures.py  kv_range_scan_t.py  mutation_tokens_t.py  py34only.py  py35only.py  query_t.py  querymgmt_t.py  rate_limit_t.py  search_t.py  searchmgmt_t.py  streaming_helpers_t.py  subdoc_t.py  threshold_logging_t.py  transactions_t.py  transcoder_t.py  usermgmt_t.py  viewmgmt_t.py  views_t.py
acouchbase/transactions/: __init__.py  transactions.py
cmake/json-cmake/: LICENSE  README.md
conf/: couchbase.conf
config/: autorun.sh  version.pl
couchbase/: JSONdocument.py  __init__.py  _bootstrap.py  _ixmgmt.py  _logutil.py  _pyport.py  _utils.py  admin.py  analytics.py  analytics_ingester.py  auth.py  auth_domain.py  binary_collection.py  bucket.py  bucketmanager.py  cbas.py  client.py  cluster.py  collection.py  connection.py  connection.pyx  connstr.py  constants.py  couchbase.c  couchbase.pyx  couchbaseclient.py  crc32.py  crypto.py  datastructures.py  diagnostics.py  durability.py  event.py  exception.py  exception_spec.py  exceptions.py  experimental.py  fulltext.py  items.py  kv_range_scan.py  lcb.c  (+35 more)
couchbase/async/: __init__.py  bucket.py  connection.py  fulltext.py  n1ql.py  view.py
couchbase/asynchronous/: __init__.py  async_bucket.py  bucket.py  fulltext.py  n1ql.py  rowsbase.py  search.py  view.py
couchbase/benchmarks/: benchmark.py  profile_it.py  profile_stats.py
couchbase/encryption/: __init__.py  crypto_manager.py  decrypter.py  encrypter.py  encryption_result.py  key.py  keyring.py
couchbase/iops/: base.py  select.py
couchbase/iterables/: __init__.py
couchbase/logic/: __init__.py  analytics.py  binding_map.py  binding_types.py  bucket.py  bucket_impl.py  bucket_req_builder.py  bucket_types.py  client_adapter.py  cluster.py  cluster_impl.py  (+29 more)
couchbase_core/: __init__.py  _bootstrap.py  _ixmgmt.py  _logutil.py  _pyport.py  admin.py  analytics.py  analytics_ingester.py  auth_domain.py  bucket.py  bucketmanager.py  client.py  cluster.py  connstr.py  crypto.py  deprecation.py  durability.py  exceptions.py  experimental.py  fulltext.py  items.py  mapper.py  mockserver.py  mutation_state.py  n1ql.py  priv_constants.py  result.py  subdocument.py  supportability.py  transcodable.py  transcoder.py  user_constants.py
couchbase_tests/: __init__.py  async_base.py  base.py  importer.py  test_sync.py
couchbase_v2/: __init__.py  bucket.py  cluster.py  exceptions_shim.py
couchbase_v3/: __init__.py  bucket.py  collection.py
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat  using_the_python_sdk.rst
examples/: abench.py  basic.py  bench.py  connection-pool.py  docloader.py  gbench.py  iops_demo.py  item.py  reversed_keys.py  search_keywords.py  twist-sample.py  txbasic.py  txbench.py  txview.py
gcouchbase/: bucket.py  cluster.py  connection.py  iops_gevent0x.py  iops_gevent10.py
httplib2/: __init__.py
jenkins/: dev_build.sh  go.sh  launch_go.sh  parse_suppressions.py  pycbc-winbuild.py  release.sh  suppressions.txt
pymembase/: exception.py  logger.py  mctest.py  membaseclient.py  memcacheConstants.py  pycouchtest.py  rest_client.py  util.py
src/: analytics.cxx  analytics.hxx  argument.c  arithmetic.c  binary_ops.cxx  binary_ops.hxx  bucket.c  callbacks.c  client.cxx  client.hxx  cntl.c  connection.c  connection.cxx  connection.hxx  connevents.c  constants.c  constants.hxx  convert.c  counter.c  cpp_core_enum_conversion_macros.hxx  cpp_core_enums.hxx  cpp_core_enums_autogen.hxx  cpp_core_types.hxx  cpp_core_types_autogen.hxx  cpp_types.hxx  crypto.c  ctranscoder.c  deprecated_tracing.hxx  diagnostics.cxx  diagnostics.hxx  error_contexts.hxx  exceptions.c  exceptions.cxx  exceptions.hxx  ext.c  fts.c  get.c  hdr_histogram.cxx  hdr_histogram.hxx  htresult.c  (+67 more)
tests/: base.py  consistency.py  couchbase_config.py  data_provider.py  helpers.py  mock_server.py  setup_tests.py  test_append.py  test_arithmetic.py  test_badargs.py  test_config.ini  test_connection.py  test_couchbase.py  test_delete.py  test_design.py  test_dupkeys.py  test_empty_key.py  test_encodings.py  test_endure.py  test_excextra.py  test_features.py  test_format.py  test_get.py  test_http.py  test_iops.py  test_itemsyntax.py  test_itertypes.py  test_itmops.py  test_lock.py  test_lockmode.py  test_misc.py  test_observe.py  test_querystrings.py  test_results.py  test_rget.py  test_set.py  test_set_converters.py  test_stats.py  test_touch.py  test_transcoder.py  (+5 more)
txcouchbase/: __init__.py  analytics.py  binary_collection.py  bucket.py  cluster.py  collection.py  connection.py  iops.py  n1ql.py  scope.py  search.py  views.py
(+673 files in other folders)
