[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "-ra -q"
testpaths = [
    "tests",
    "acouchbase/tests",
    "couchbase/tests",
    "txcouchbase/tests",
]
python_classes = [
    "*Tests"
]
python_files = [
    "*_t.py"
]
markers = [
    "pycbc_couchbase: marks a test for the couchbase API (deselect with '-m \"not pycbc_couchbase\"')",
    "pycbc_acouchbase: marks a test for the acouchbase API (deselect with '-m \"not pycbc_acouchbase\"')",
    "pycbc_txcouchbase: marks a test for the txcouchbase API (deselect with '-m \"not pycbc_txcouchbase\"')",
    "pycbc_diag: marks a test as a diagnostic API test",
    "pycbc_kv: marks a test as a Key-Value API test",
    "pycbc_streaming: marks a test as a streaming (query, search, analytics, or views) API test",
    "pycbc_mgmt: marks a test as a management API test",
    "pycbc_misc: marks a test as a miscellaneous (connect, rate_limit) API test",
    "pycbc_txn: marks a test as a transactions API test",
    "pycbc_slow_mgmt: marks a test as a management API test that is slow",
]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true

[tool.isort]
multi_line_output = 1
force_grid_wrap = 3
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
order_by_type = true
